Fixed header dropdown body layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.d {
-  background-color: hsl(0, 0%, 95%);
-}
+
 
 @layer base {
   :root {
